src/main/java/generated/parser/p4/P4GrammarParser.java
// Generated from C:/Users/a-drdum/source/repos/symnet-neutron/src/main/resources/p4_grammar\P4Grammar.g4 by ANTLR 4.7.2
package generated.parser.p4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class P4GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		Binary_value=102, Decimal_value=103, Hexadecimal_value=104, BINARY_BASE=105, 
		HEXADECIMAL_BASE=106, NAME=107, WS=108;
	public static final int
		RULE_p4_program = 0, RULE_p4_declaration = 1, RULE_const_value = 2, RULE_unsigned_value = 3, 
		RULE_width_spec = 4, RULE_field_value = 5, RULE_header_type_declaration = 6, 
		RULE_header_type_name = 7, RULE_header_dec_body = 8, RULE_field_dec = 9, 
		RULE_field_name = 10, RULE_field_mod = 11, RULE_length_bin_op = 12, RULE_length_exp = 13, 
		RULE_bit_width = 14, RULE_instance_declaration = 15, RULE_header_instance = 16, 
		RULE_scalar_instance = 17, RULE_array_instance = 18, RULE_instance_name = 19, 
		RULE_metadata_instance = 20, RULE_metadata_initializer = 21, RULE_header_ref = 22, 
		RULE_index = 23, RULE_field_ref = 24, RULE_field_list_declaration = 25, 
		RULE_field_list_name = 26, RULE_field_list_entry = 27, RULE_field_list_calculation_declaration = 28, 
		RULE_field_list_calculation_name = 29, RULE_stream_function_algorithm_name = 30, 
		RULE_calculated_field_declaration = 31, RULE_update_verify_spec = 32, 
		RULE_update_or_verify = 33, RULE_if_cond = 34, RULE_calc_bool_cond = 35, 
		RULE_value_set_declaration = 36, RULE_value_set_name = 37, RULE_parser_function_declaration = 38, 
		RULE_parser_state_name = 39, RULE_parser_function_body = 40, RULE_extract_or_set_statement = 41, 
		RULE_extract_statement = 42, RULE_header_extract_ref = 43, RULE_header_extract_index = 44, 
		RULE_set_statement = 45, RULE_simple_metadata_expr = 46, RULE_plus_metadata_expr = 47, 
		RULE_minus_metadata_expr = 48, RULE_compound = 49, RULE_metadata_expr = 50, 
		RULE_return_statement = 51, RULE_return_value_type = 52, RULE_control_function_name = 53, 
		RULE_parser_exception_name = 54, RULE_case_entry = 55, RULE_value_list = 56, 
		RULE_case_return_value_type = 57, RULE_value_or_masked = 58, RULE_select_exp = 59, 
		RULE_latest_field_ref = 60, RULE_data_ref = 61, RULE_field_or_data_ref = 62, 
		RULE_parser_exception_declaration = 63, RULE_return_or_drop = 64, RULE_return_to_control = 65, 
		RULE_counter_declaration = 66, RULE_counter_type = 67, RULE_direct_or_static = 68, 
		RULE_direct_attribute = 69, RULE_static_attribute = 70, RULE_meter_declaration = 71, 
		RULE_meter_attribute = 72, RULE_const_expr = 73, RULE_table_name = 74, 
		RULE_meter_name = 75, RULE_counter_name = 76, RULE_register_name = 77, 
		RULE_meter_type = 78, RULE_register_declaration = 79, RULE_width_declaration = 80, 
		RULE_attribute_list = 81, RULE_attr_entry = 82, RULE_action_function_declaration = 83, 
		RULE_action_header = 84, RULE_param_list = 85, RULE_action_statement = 86, 
		RULE_arg = 87, RULE_action_profile_declaration = 88, RULE_action_name = 89, 
		RULE_param_name = 90, RULE_selector_name = 91, RULE_action_profile_name = 92, 
		RULE_action_specification = 93, RULE_action_selector_declaration = 94, 
		RULE_table_declaration = 95, RULE_field_match = 96, RULE_field_or_masked_ref = 97, 
		RULE_field_match_type = 98, RULE_table_actions = 99, RULE_action_profile_specification = 100, 
		RULE_control_function_declaration = 101, RULE_control_fn_name = 102, RULE_control_block = 103, 
		RULE_control_statement = 104, RULE_apply_table_call = 105, RULE_apply_and_select_block = 106, 
		RULE_case_list = 107, RULE_action_case = 108, RULE_action_or_default = 109, 
		RULE_hit_miss_case = 110, RULE_hit_or_miss = 111, RULE_if_else_statement = 112, 
		RULE_else_block = 113, RULE_bool_expr = 114, RULE_exp = 115, RULE_value = 116, 
		RULE_bin_op = 117, RULE_un_op = 118, RULE_bool_op = 119, RULE_rel_op = 120;
	private static String[] makeRuleNames() {
		return new String[] {
			"p4_program", "p4_declaration", "const_value", "unsigned_value", "width_spec", 
			"field_value", "header_type_declaration", "header_type_name", "header_dec_body", 
			"field_dec", "field_name", "field_mod", "length_bin_op", "length_exp", 
			"bit_width", "instance_declaration", "header_instance", "scalar_instance", 
			"array_instance", "instance_name", "metadata_instance", "metadata_initializer", 
			"header_ref", "index", "field_ref", "field_list_declaration", "field_list_name", 
			"field_list_entry", "field_list_calculation_declaration", "field_list_calculation_name", 
			"stream_function_algorithm_name", "calculated_field_declaration", "update_verify_spec", 
			"update_or_verify", "if_cond", "calc_bool_cond", "value_set_declaration", 
			"value_set_name", "parser_function_declaration", "parser_state_name", 
			"parser_function_body", "extract_or_set_statement", "extract_statement", 
			"header_extract_ref", "header_extract_index", "set_statement", "simple_metadata_expr", 
			"plus_metadata_expr", "minus_metadata_expr", "compound", "metadata_expr", 
			"return_statement", "return_value_type", "control_function_name", "parser_exception_name", 
			"case_entry", "value_list", "case_return_value_type", "value_or_masked", 
			"select_exp", "latest_field_ref", "data_ref", "field_or_data_ref", "parser_exception_declaration", 
			"return_or_drop", "return_to_control", "counter_declaration", "counter_type", 
			"direct_or_static", "direct_attribute", "static_attribute", "meter_declaration", 
			"meter_attribute", "const_expr", "table_name", "meter_name", "counter_name", 
			"register_name", "meter_type", "register_declaration", "width_declaration", 
			"attribute_list", "attr_entry", "action_function_declaration", "action_header", 
			"param_list", "action_statement", "arg", "action_profile_declaration", 
			"action_name", "param_name", "selector_name", "action_profile_name", 
			"action_specification", "action_selector_declaration", "table_declaration", 
			"field_match", "field_or_masked_ref", "field_match_type", "table_actions", 
			"action_profile_specification", "control_function_declaration", "control_fn_name", 
			"control_block", "control_statement", "apply_table_call", "apply_and_select_block", 
			"case_list", "action_case", "action_or_default", "hit_miss_case", "hit_or_miss", 
			"if_else_statement", "else_block", "bool_expr", "exp", "value", "bin_op", 
			"un_op", "bool_op", "rel_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'''", "'header_type'", "'{'", "'}'", "'fields'", 
			"'length'", "':'", "';'", "'max_length'", "'('", "')'", "'signed'", "'saturating'", 
			"','", "'*'", "'<<'", "'>>'", "'header'", "'['", "']'", "'metadata'", 
			"'last'", "'.'", "'field_list'", "'payload'", "'field_list_calculation'", 
			"'input'", "'algorithm'", "'output_width'", "'calculated_field'", "'update'", 
			"'verify'", "'if'", "'valid'", "'=='", "'parser_value_set'", "'parser'", 
			"'extract'", "'next'", "'set_metadata'", "'return'", "'select'", "'parse_error'", 
			"'default'", "'mask'", "'latest'", "'current'", "'parser_exception'", 
			"'parser_drop'", "'counter'", "'type'", "'instance_count'", "'min_width'", 
			"'bytes'", "'packets'", "'packets_and_bytes'", "'direct'", "'static'", 
			"'meter'", "'result'", "'register'", "'width'", "'attributes'", "'action'", 
			"'action_profile'", "'size'", "'dynamic_action_selection'", "'actions'", 
			"'action_selector'", "'selection_key'", "'selection_mode'", "'table'", 
			"'reads'", "'min_size'", "'max_size'", "'support_timeout'", "'true'", 
			"'false'", "'exact'", "'ternary'", "'lpm'", "'range'", "'control'", "'apply'", 
			"'hit'", "'miss'", "'else'", "'not'", "'&'", "'|'", "'^'", "'~'", "'or'", 
			"'and'", "'>'", "'>='", "'<='", "'<'", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "Binary_value", "Decimal_value", 
			"Hexadecimal_value", "BINARY_BASE", "HEXADECIMAL_BASE", "NAME", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "P4Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public P4GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class P4_programContext extends ParserRuleContext {
		public org.change.p4.model.Switch switchSpec;
		public List<P4_declarationContext> p4_declaration() {
			return getRuleContexts(P4_declarationContext.class);
		}
		public P4_declarationContext p4_declaration(int i) {
			return getRuleContext(P4_declarationContext.class,i);
		}
		public P4_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p4_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P4GrammarListener ) ((P4GrammarListener)listener).enterP4_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P4GrammarListener ) ((P4GrammarListener)listener).exitP4_program(this);
		}
	}

	public final P4_programContext p4_program() throws RecognitionException {
		P4_programContext _localctx = new P4_programContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_p4_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(243); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(242);
				p4_declaration();
				}
				}
				setState(245); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__19) | (1L << T__22) | (1L << T__25) | (1L << T__27) | (1L << T__31) | (1L << T__37) | (1L << T__38) | (1L << T__49) | (1L << T__51) | (1L << T__60) | (1L << T__62))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (T__65 - 66)) | (1L << (T__66 - 66)) | (1L << (T__70 - 66)) | (1L << (T__73 - 66)) | (1L << (T__84 - 66)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P4_declarationContext extends ParserRuleContext {
		public Header_type_declarationContext header_type_declaration() {
			return getRuleContext(Header_type_declarationContext.class,0);
		}
		public Instance_declarationContext instance_declaration() {
			return getRuleContext(Instance_declarationContext.class,0);
		}
		public Field_list_declarationContext field_list_declaration() {
			return getRuleContext(Field_list_declarationContext.class,0);
		}
		public Field_list_calculation_declarationContext field_list_calculation_declaration() {
			return getRuleContext(Field_list_calculation_declarationContext.class,0);
		}
		public Calculated_field_declarationContext calculated_field_declaration() {
			return getRuleContext(Calculated_field_declarationContext.class,0);
		}
		public Value_set_declarationContext value_set_declaration() {
			return getRuleContext(Value_set_declarationContext.class,0);
		}
		public Parser_function_declarationContext parser_function_declaration() {
			return getRuleContext(Parser_function_declarationContext.class,0);
		}
		public Parser_exception_declarationContext parser_exception_declaration() {
			return getRuleContext(Parser_exception_declarationContext.class,0);
		}
		public Counter_declarationContext counter_declaration() {
			return getRuleContext(Counter_declarationContext.class,0);
		}
		public Meter_declarationContext meter_declaration() {
			return getRuleContext(Meter_declarationContext.class,0);
		}
		public Register_declarationContext register_declaration() {
			return getRuleContext(Register_declarationContext.class,0);
		}
		public Action_function_declarationContext action_function_declaration() {
			return getRuleContext(Action_function_declarationContext.class,0);
		}
		public Action_profile_declarationContext action_profile_declaration() {
			return getRuleContext(Action_profile_declarationContext.class,0);
		}
		public Action_selector_declarationContext action_selector_declaration() {
			return getRuleContext(Action_selector_declarationContext.class,0);
		}
		public Table_declarationContext table_declaration() {
			return getRuleContext(Table_declarationContext.class,0);
		}
		public Control_function_declarationContext control_function_declaration() {
			return getRuleContext(Control_function_declarationContext.class,0);
		}
		public P4_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p4_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P4GrammarListener ) ((P4GrammarListener)listener).enterP4_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P4GrammarListener ) ((P4GrammarListener)listener).exitP4_declaration(this);
		}
	}

	public final P4_declarationContext p4_declaration() throws RecognitionException {
		P4_declarationContext _localctx = new P4_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_p4_declaration);
		try {
			setState(263);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(247);
				header_type_declaration();
				}
				break;
			case T__19:
			case T__22:
				enterOuterAlt(_localctx, 2);
				{
				setState(248);
				instance_declaration();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 3);
				{
				setState(249);
				field_list_declaration();
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 4);
				{
				setState(250);
				field_list_calculation_declaration();
				}
				break;
			case T__31:
				enterOuterAlt(_localctx, 5);
				{
				setState(251);
				calculated_field_declaration();
				}
				break;
			case T__37:
				enterOuterAlt(_localctx, 6);
				{
				setState(252);
				value_set_declaration();
				}
				break;
			case T__38:
				enterOuterAlt(_localctx, 7);
				{
				setState(253);
				parser_function_declaration();
				}
				break;
			case T__49:
				enterOuterAlt(_localctx, 8);
				{
				setState(254);
				parser_exception_declaration();
				}
				break;
			case T__51:
				enterOuterAlt(_localctx, 9);
				{
				setState(255);
				counter_declaration();
				}
				break;
			case T__60:
				enterOuterAlt(_localctx, 10);
				{
				setState(256);
				meter_declaration();
				}
				break;
			case T__62:
				enterOuterAlt(_localctx, 11);
				{
				setState(257);
				register_declaration();
				}
				break;
			case T__65:
				enterOuterAlt(_localctx, 12);
				{
				setState(258);
				action_function_declaration();
				}
				break;
			case T__66:
				enterOuterAlt(_localctx, 13);
				{
				setState(259);
				action_profile_declaration();
				}
				break;
			case T__70:
				enterOuterAlt(_localctx, 14);
				{
				setState(260);
				action_selector_declaration();
				}
				break;
			case T__73:
				enterOuterAlt(_localctx, 15);
				{
				setState(261);
				table_declaration();
				}
				break;
			case T__84:
				enterOuterAlt(_localctx, 16);
				{
				setState(262);
				control_function_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
